--- a/package.json
+++ b/package.json
@@ -111,9 +111,9 @@
     "git:update:force": "git add . && git commit -m \"chore: update\" && git push --force",
     "publish:npm": "npm publish",
     "publish:npm:next": "npm publish --tag next",
-    "version:patch": "HUSKY=0 npm version patch && HUSKY=0 npm run generate:changelog && git add CHANGELOG.md && git commit -m \"chore(release): %s [skip ci]\" --no-verify",
-    "version:minor": "HUSKY=0 npm version minor && HUSKY=0 npm run generate:changelog && git add CHANGELOG.md && git commit -m \"chore(release): %s [skip ci]\" --no-verify",
-    "version:major": "HUSKY=0 npm version major && HUSKY=0 npm run generate:changelog && git add CHANGELOG.md --no-verify && git commit -m \"chore(release): %s [skip ci]\" --no-verify",
+    "version:patch": "HUSKY=0 npm version patch && HUSKY=0 npm run generate:changelog && git add CHANGELOG.md && git commit -m \"chore(release): %s\" --no-verify",
+    "version:minor": "HUSKY=0 npm version minor && HUSKY=0 npm run generate:changelog && git add CHANGELOG.md && git commit -m \"chore(release): %s\" --no-verify",
+    "version:major": "HUSKY=0 npm version major && HUSKY=0 npm run generate:changelog && git add CHANGELOG.md --no-verify && git commit -m \"chore(release): %s\" --no-verify",
     "generate:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "husky": {
