--- a/websites/www.assemblejs.com/package.json
+++ b/websites/www.assemblejs.com/package.json
@@ -28,13 +28,18 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "cp build/index.html build/404.html && echo 'Website built and ready for deployment'"
+    "deploy": "cp build/index.html build/404.html && echo 'Website built and ready for deployment'",
+    "lint": "eslint --max-warnings=0 src",
+    "build:ci": "CI=true npm run build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "error"
+    }
   },
   "browserslist": {
     "production": [
