chore: update workflows for cache error

--- a/.github/workflows/lint-validation.yml
+++ b/.github/workflows/lint-validation.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           path: |
             node_modules
+            websites/www.assemblejs.com/node_modules
             lib
           key: ${{ inputs.build-cache-key }}
           
