chore: fix build issues

--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "lint:modules": "depcruise --config .dependency-cruiser.cjs src",
     "lint:deps": "npx depcheck",
     "lint:types": "npx typesync",
-    "lint": "run-s lint:sort lint:pretty lint:fix lint:modules",
+    "lint:website": "cd websites/www.assemblejs.com && npm run lint",
+    "lint": "run-s lint:sort lint:pretty lint:fix lint:modules lint:website",
     "update:check": "npx npm-check-updates",
     "update:major": "npm run update:check -- -u",
     "update:minor": "npm run update:check -- --target minor -u",
