chore: fix build issues

--- a/.github/workflows/deploy-next-website.yml
+++ b/.github/workflows/deploy-next-website.yml
@@ -39,7 +39,7 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
       
       - name: Install main package dependencies
-        run: npm ci --ignore-scripts
+        run: npm ci --include=dev
       
       - name: Build everything
         run: npm run build
