--- a/.github/workflows/deploy-website-assemblejs.yml
+++ b/.github/workflows/deploy-website-assemblejs.yml
@@ -56,7 +56,7 @@ jobs:
           echo "clean_version=$CLEAN_VERSION" >> $GITHUB_OUTPUT
       
       - name: Install main package dependencies
-        run: npm ci --ignore-scripts
+        run: npm ci --include=dev
       
       - name: Build everything
         run: npm run build
