--- a/.github/workflows/release-next-package.yml
+++ b/.github/workflows/release-next-package.yml
@@ -30,7 +30,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       
       - name: Install dependencies
-        run: npm ci --ignore-scripts
+        run: npm ci  --include=dev
       
       - name: Determine publish tag
         id: publish-tag
