--- a/.github/workflows/build-validation.yml
+++ b/.github/workflows/build-validation.yml
@@ -58,6 +58,11 @@ jobs:
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: npm ci --include=dev
       
+      # Install website dependencies if cache miss
+      - name: Install website dependencies
+        if: steps.cache-build.outputs.cache-hit != 'true'
+        run: cd websites/www.assemblejs.com && npm ci
+      
       # Build project
       - name: Build project
         id: build-validation
