--- a/.github/workflows/deploy-next-version.yml
+++ b/.github/workflows/deploy-next-version.yml
@@ -42,6 +42,9 @@ jobs:
       
       - name: Install website dependencies
         run: cd websites/www.assemblejs.com && npm ci
+
+      - name: Install Testbed dependencies
+        run: npm run install:testbed
       
       - name: Build main package
         run: npm run build
