--- a/.github/workflows/deploy-main-version.yml
+++ b/.github/workflows/deploy-main-version.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Install website dependencies
         run: cd websites/www.assemblejs.com && npm ci
       
-      - name: Build main package
-        run: npm run build
+      - name: Build and pack main package
+        run: npm pack
       
       - name: Cache build artifacts
         uses: actions/cache/save@v4
@@ -53,6 +53,7 @@ jobs:
             lib/
             websites/www.assemblejs.com/build/
             docs/
+            *.tgz
           key: ${{ env.cache-key }}
           enableCrossOsArchive: true
   
@@ -74,9 +75,6 @@ jobs:
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
       
-      - name: Install dependencies
-        run: npm ci --include=dev
-      
       - name: Restore build artifacts
         uses: actions/cache/restore@v4
         with:
@@ -84,6 +82,7 @@ jobs:
             lib/
             websites/www.assemblejs.com/build/
             docs/
+            *.tgz
           key: ${{ env.cache-key }}
           fail-on-cache-miss: true
       
@@ -91,7 +90,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm publish --tag latest
+          npm publish *.tgz --tag latest
           echo "Published package to npm with tag: latest"
   
   # Deploy website to S3 production bucket
