--- a/.github/workflows/deploy-next-version.yml
+++ b/.github/workflows/deploy-next-version.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install website dependencies
         run: cd websites/www.assemblejs.com && npm ci
       
-      - name: Build main package
+      - name: Build and pack main package
         run: npm pack
       
       - name: Install Testbed dependencies
@@ -60,6 +60,7 @@ jobs:
             websites/www.assemblejs.com/build/
             testbed/*/dist/
             docs/
+            *.tgz
           key: ${{ env.cache-key }}
           enableCrossOsArchive: true
   
@@ -81,9 +82,6 @@ jobs:
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
       
-      - name: Install dependencies
-        run: npm ci --include=dev
-      
       - name: Restore build artifacts
         uses: actions/cache/restore@v4
         with:
@@ -92,6 +90,7 @@ jobs:
             websites/www.assemblejs.com/build/
             testbed/*/dist/
             docs/
+            *.tgz
           key: ${{ env.cache-key }}
           fail-on-cache-miss: true
       
@@ -99,7 +98,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm publish --tag next
+          npm publish *.tgz --tag next
           echo "Published package to npm with tag: next"
   
   # Deploy website to S3 next bucket
