--- a/testbed/Dockerfile.testbed
+++ b/testbed/Dockerfile.testbed
@@ -1,9 +1,11 @@
-FROM node:18-slim
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Copy package files and install dependencies
+# Copy package files
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install asmbl@next
 
 # Copy source code
