--- a/.github/workflows/deploy-next-version.yml
+++ b/.github/workflows/deploy-next-version.yml
@@ -224,22 +224,20 @@ jobs:
               # Move into project directory
               cd "$project_name"
               
-              # Verify Dockerfile exists
-              if [ ! -f "Dockerfile" ]; then
-                echo "⚠️ Dockerfile not found in $project_name, using shared template"
-                # Check if shared Dockerfile exists in testbed directory
-                if [ -f "../Dockerfile.testbed" ]; then
-                  cp "../Dockerfile.testbed" "./Dockerfile"
-                else
-                  echo "::error::Shared Dockerfile template not found at ../Dockerfile.testbed"
-                  echo "::error::Please create the Dockerfile template before deploying"
-                  exit 1
-                fi
+              # Always use the shared Dockerfile template
+              echo "Using shared Dockerfile template for $project_name"
+              if [ -f "../Dockerfile.testbed" ]; then
+                cp "../Dockerfile.testbed" "./Dockerfile"
+              else
+                echo "::error::Shared Dockerfile template not found at ../Dockerfile.testbed"
+                echo "::error::Please create the Dockerfile template before deploying"
+                exit 1
               fi
               
-              # Create ECR repository if it doesn't exist
-              aws ecr describe-repositories --repository-names "$ECR_REPOSITORY_BASE/$project_name" || \
-                aws ecr create-repository --repository-name "$ECR_REPOSITORY_BASE/$project_name"
+              # Create ECR repository if it doesn't exist (suppress all output)
+              echo "Checking/creating ECR repository: $ECR_REPOSITORY_BASE/$project_name"
+              aws ecr describe-repositories --repository-names "$ECR_REPOSITORY_BASE/$project_name" > /dev/null 2>&1 || \
+                aws ecr create-repository --repository-name "$ECR_REPOSITORY_BASE/$project_name" > /dev/null 2>&1
               
               # Build and push Docker image
               IMAGE_TAG="$ECR_REGISTRY/$ECR_REPOSITORY_BASE/$project_name:next-$TIMESTAMP"
