--- a/.github/workflows/deploy-main-version.yml
+++ b/.github/workflows/deploy-main-version.yml
@@ -15,59 +15,10 @@ permissions:
   contents: read
   packages: write
 
-# Define reusable cache key
-env:
-  cache-key: build-artifacts-${{ github.sha }}
-
 jobs:
-  # Primary build job that constructs all artifacts
-  build:
-    name: Build Main Version
-    runs-on: ubuntu-latest
-    outputs:
-      package_tgz: ${{ steps.pack.outputs.package_tgz }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          cache: 'npm'
-          registry-url: 'https://registry.npmjs.org'
-      
-      - name: Install dependencies
-        run: npm ci --include=dev
-      
-      - name: Install website dependencies
-        run: cd websites/www.assemblejs.com && npm ci
-      
-      - name: Build and pack main package
-        id: pack
-        run: |
-          # Run npm pack and capture the filename
-          PACKAGE_TGZ=$(npm pack | tail -n 1)
-          echo "Generated package: $PACKAGE_TGZ"
-          echo "package_tgz=$PACKAGE_TGZ" >> $GITHUB_OUTPUT
-      
-      - name: Cache build artifacts
-        uses: actions/cache/save@v4
-        with:
-          path: |
-            lib/
-            websites/www.assemblejs.com/build/
-            docs/
-            *.tgz
-          key: ${{ env.cache-key }}
-          enableCrossOsArchive: true
-  
-  # Publish package to npm with latest tag
-  publish-package:
-    name: Publish Package to NPM
-    needs: build
+  # Promote NPM package from next to latest tag
+  promote-package:
+    name: Promote Package to Latest
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -79,59 +30,31 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
       
-      - name: Restore build artifacts
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            lib/
-            websites/www.assemblejs.com/build/
-            docs/
-            *.tgz
-          key: ${{ env.cache-key }}
-          fail-on-cache-miss: true
-      
-      - name: Publish to npm
+      - name: Promote to latest tag
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          echo "Publishing package: ${{ needs.build.outputs.package_tgz }}"
-          npm publish "${{ needs.build.outputs.package_tgz }}" --tag latest
-          echo "Published package to npm with tag: latest"
+          echo "Promoting package to latest tag..."
+          # Extract version from package.json
+          VERSION=$(node -p "require('./package.json').version")
+          echo "Package version: $VERSION"
+          
+          # Use dist-tag to promote from next to latest
+          npm dist-tag add asmbl@$VERSION latest
+          echo "Promoted version $VERSION to latest tag"
   
-  # Deploy website to S3 production bucket
+  # Copy website from next to production bucket
   deploy-website:
     name: Deploy Main Website
-    needs: [build, publish-package]
+    needs: promote-package
     runs-on: ubuntu-latest
     environment: production
     permissions:
       contents: read
       id-token: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-      
-      - name: Restore build artifacts
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            lib/
-            websites/www.assemblejs.com/build/
-            docs/
-            *.tgz
-          key: ${{ env.cache-key }}
-          fail-on-cache-miss: true
-      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -142,13 +65,14 @@ jobs:
           mask-aws-account-id: 'no'
           output-credentials: true
       
-      - name: Deploy to S3 production bucket
+      - name: Copy from next to production bucket
         run: |
-          # Use www.assemblejs.com as the bucket name
-          S3_BUCKET="www.assemblejs.com"
+          # Define source and destination buckets
+          SOURCE_BUCKET="www.next.assemblejs.com"
+          DEST_BUCKET="www.assemblejs.com"
           
-          # Deploy to root of production bucket
-          echo "Deploying to s3://$S3_BUCKET/"
-          aws s3 sync "websites/www.assemblejs.com/build/" "s3://$S3_BUCKET/" --delete
+          # Copy from next staging bucket to www production bucket
+          echo "Copying from s3://$SOURCE_BUCKET/ to s3://$DEST_BUCKET/"
+          aws s3 sync "s3://$SOURCE_BUCKET/" "s3://$DEST_BUCKET/" --delete
           
-          echo "🚀 AssembleJS website successfully deployed to www.assemblejs.com"
+          echo "🚀 AssembleJS website successfully deployed from www.next.assemblejs.com to www.assemblejs.com"
